--- a/src/components/about/about.style.mobile.scss
+++ b/src/components/about/about.style.mobile.scss
@@ -52,13 +52,15 @@
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     grid-template-rows: repeat(10, 1fr);
+    margin-top: 5px;
+    margin-left: 5px;
   }
 
   .about__titlepageback {
     background-color: white;
     grid-column: 1 / 33;
     grid-row: 1 / 25;
-    margin-left: 6px;
+    margin-left: 10px;
     border: 3px #E03E52 solid;
 
   }
@@ -75,6 +77,7 @@
 
   .about__description {
     // @extend .soft__black__subtitle;
+    font-weight: 400;
     font-size: 12px;
     grid-row: 2/8;
     grid-column: 1/10;
@@ -82,6 +85,8 @@
     white-space: pre-line;
     line-height: 140%;
     text-align: left;
+    margin-top: 10px;
+    margin-left: 10px;
   }
 
   .about__contactus {
@@ -114,7 +119,8 @@
     font-size: 12px;
     white-space: initial;
     grid-row: 5/7;
-    grid-column: 3/7;
+    grid-column: 2/7;
+    margin-left: 20px;
   }
   .about__titleinsight {
     // @extend .soft__white__title;
@@ -126,7 +132,8 @@
     font-size: 12px;
     white-space: initial;
     grid-row: 12/15;
-    grid-column: 3/7;
+    grid-column: 2/7;
+    margin-left: 20px;
     
   }
   .about__titlecapabilities {
@@ -139,8 +146,9 @@
     font-size: 12px;
     white-space: pre-wrap;
     grid-row: 19/20;
-    grid-column: 3/7;
+    grid-column: 2/7;
     white-space: initial;
+    margin-left: 20px;
   }
 
   .about__seehowexperience {
